backend/grafana-alloy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-alloy
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-alloy
  template:
    metadata:
      labels:
        app: grafana-alloy
    spec:
      serviceAccountName: grafana-alloy
      containers:
        - name: alloy
          image: grafana/alloy:latest
          args:
            - run
            - /etc/alloy/config.alloy
          volumeMounts:
            - name: config
              mountPath: /etc/alloy
      volumes:
        - name: config
          configMap:
            name: alloy-config
