backend/nutrilens-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nutrilens-service
  namespace: nutrilens
spec:
  type: ClusterIP
  selector:
    app: nutrilens-api
  ports:
    - port: 80
      targetPort: 8000
